# libkavasam

./: .gitignore  Cargo.toml  Makefile  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: coverage.yml  linux.yml
implementors/core/clone/: trait.Clone.js
implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
implementors/core/convert/: trait.From.js  trait.TryFrom.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js  trait.Display.js
implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/multihash/multihash/: trait.MultihashDigest.js
implementors/serde/de/: trait.Deserialize.js
implementors/serde/ser/: trait.Serialize.js
implementors/std/error/: trait.Error.js
libkavasam/: all.html  enum.Code.html  enum.IDType.html  index.html  sidebar-items.js  struct.ReportMessage.html  struct.ReportMessageBuilder.html  struct.SignedHash.html  struct.SignedHashAsciiArmored.html  type.Multihash.html
libkavasam/errors/: enum.ServiceError.html  index.html  type.ServiceResult.html
libkavasam/id/: index.html  sidebar-items.js  struct.Identity.html  struct.PublicKey.html
src/: errors.rs  id.rs  lib.rs
src/libkavasam/: errors.rs.html  id.rs.html  lib.rs.html
