[package]
name = "libkavasam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
multihash = { version = "0.15.0", features=["serde-codec"]}
ring = "0.16.20"
serde = { version = "*", features=["derive"]}
serde_json = "*"
